[package]
name = "bump"
version = "0.1.2"
edition = "2021"
authors = ["Andrew Booth"]
description = "A SemVer version bumper"
repository = "https://github.com/broothie/bump"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.17", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.6.0"
thiserror = "1.0.37"
